src/objects/NCR_Failed_Record__c.object
<CustomObject>
    <description>This sObject will be used to generate error report for NCR transaction.</description>
    <fields>
        <fullName>Error_message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Licensee_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Licensee Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensee_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Licensee Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profession Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profession Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Validation Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Validation Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Item_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Validation Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Sequence_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Validation Sequence Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>NCR Failed Record</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NCR Failed Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCR Failed Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>